<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.home.fragments.vehiclerequest.VehicleRequestDetailFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_48sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinbold"
                android:text="@string/vehicle_data"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/vehicle_company"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:text="@string/honda"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/vehicle_model"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:text="@string/cr_v_2022"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14ssp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/driving_license_number"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:text="@string/_83902802030"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/number_of_seats"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:text="@string/_100"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14ssp" />





        </LinearLayout>


    </ScrollView>

</LinearLayout>