<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.home.fragments.companydriverrequest.CompanyDriverRequestDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_48sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinbold"
                android:text="@string/company_driver_detail"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/company_name"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:text="@string/seagull"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14ssp" />
            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/dinregular"
                android:text="@string/first_name"
                android:textSize="15sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driver_info" />

            <TextView
                android:id="@+id/first_name_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dinregular"
                android:textColor="@color/purple"
                android:textSize="19sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name"
                android:text="@string/first_name_entry" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/dinregular"
                android:text="@string/last_name"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/last_name_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dinregular"
                android:textColor="@color/purple"
                android:textSize="19sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/last_name_entry" />

            <TextView
                android:id="@+id/mobile_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/dinregular"
                android:text="@string/mobile_number"
                android:textSize="15sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_entry" />

            <TextView
                android:id="@+id/mobile_num_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dinregular"
                android:textColor="@color/purple"
                android:textSize="19sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobile_num"
                android:text="@string/mobile_num_entry" />

            <TextView
                android:id="@+id/id_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/dinregular"
                android:text="@string/identification_number"
                android:textSize="15sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobile_num_entry" />

            <TextView
                android:id="@+id/id_num_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dinregular"
                android:textColor="@color/purple"
                android:textSize="19sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_num"
                android:text="@string/id_num_entry" />

            <TextView
                android:id="@+id/driver_lic_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/dinregular"
                android:text="@string/driving_license_number"
                android:textSize="15sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_num_entry" />

            <TextView
                android:id="@+id/driver_lic_num_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dinregular"
                android:textColor="@color/purple"
                android:textSize="19sp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driver_lic_num"
                android:text="@string/driver_lic_num_entry" />

        </LinearLayout>


    </ScrollView>

</FrameLayout>